--- a/api-back/package.json
+++ b/api-back/package.json
@@ -4,20 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^20.12.11",
-    "prisma": "^5.13.0",
-    "typescript": "^5.4.5"
-  },
   "dependencies": {
-    "@fastify/cors": "^9.0.1",
-    "@prisma/client": "^5.13.0",
-    "fastify": "^4.27.0",
-    "tsx": "^4.9.3"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.3.4",
+    "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
